--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dom": "^17.0.0",
     "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-router": "^4.3.1",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10"
